# zz-test

./: LICENSE  Makefile  README.md
src/: CMakeLists.txt  main.c
src/ZZTest/: CMakeLists.txt  TestZZTest.c  TestZZTest.h  zz-test.c  zz-test.h
